--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
 			<ul class="nav navbar-nav ml-auto w-100 justify-content-end">
 				<li class="nav-item">
-					<a class="nav-link nav-link2" href="https://emberswap.com/analytics">Analytics</a>
+					<a class="nav-link nav-link2" href="https://dex.emberswap.com/analytics">Analytics</a>
 				</li>
 				<li class="nav-item dropdown">
 						<a class="nav-link nav-link2" type="button" id="dropdownMenuButton" data-toggle="dropdown">FAQ
@@ -67,7 +67,7 @@
 						</div>
 				</li>
 				<li class="nav-item">
-						<a class="btn btn-outline-secondary" href="https://emberswap.com">Enter App</a>
+						<a class="btn btn-outline-secondary" href="https://dex.emberswap.com">Enter App</a>
 				</li>
 			</ul>
 		</div>
@@ -168,10 +168,8 @@
 	<div class="col-xl-12 sixth-container">
 		<div class="row justify-content-center align-items-center">
 			<div class="col-xl-11 sec-six">
-				<h1 class="text-white text-center">50+ supported SEP-20 tokens</h1>
-				<p class="text-center mt-5 mb-5"><br>
-					The EmberSwap ecosystem connects the best from all trading protocols, lending markets, <br>and yield optimizers for
-					the largest crypto-currency hub.</p>
+				<h1 class="text-white text-center">More than 50+ supported SEP-20 tokens</h1>
+	
 			</div>
 		</div>
 		<div class="row justify-content-center align-items-center">
