--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
 
 			<div class="row justify-content-center align-items-center h-100vh">
 				<div class="col-xl-6 sec-one">
-					<h1 class="text-white text-center font-weight-bolder text-xl-left"> <a>DEFI ON BITCOIN CASH</a><br><br>THE MOST POWERFUL<br> COMMUNITY-DRIVEN<br> PLATFORM FOR
+					<h1 class="text-white text-center font-weight-bolder text-xl-left d-none d-sm-block"> <a>DEFI ON BITCOIN CASH</a><br><br>THE MOST POWERFUL<br> COMMUNITY-DRIVEN<br> PLATFORM FOR
+						<a href="" class="typewrite strong"; data-period="2000"
+							data-type='["SWAPS","GOVERNANCE","GAINS"]'>
+							<span class="wrap"></span>
+						</a>
+					</h1>
+					<h1 class="text-white text-center font-weight-bolder text-xl-left d-xl-none d-lg-none d-md-none d-sm-none"> <a>DEFI ON <br>BITCOIN<br>CASH</a><br><br>THE MOST POWERFUL<br> COMMUNITY-DRIVEN<br> PLATFORM FOR
 						<a href="" class="typewrite strong"; data-period="2000"
 							data-type='["SWAPS","GOVERNANCE","GAINS"]'>
 							<span class="wrap"></span>
