--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<span class="wrap"></span>
 						</a>
 					</h1>
-					<h1 class="text-white text-center font-weight-bolder text-xl-left d-xl-none d-lg-none d-md-none d-sm-none"> <a>DEFI ON <br>BITCOIN<br>CASH</a><br><br>THE MOST POWERFUL<br> COMMUNITY-DRIVEN<br> PLATFORM FOR
+					<h1 class="text-white text-center font-weight-bolder text-xl-left d-xl-none d-lg-none d-md-none d-sm-none"> <a>DEFI ON</a> <a>BITCOIN CASH</a><br><br>THE MOST POWERFUL<br> COMMUNITY-DRIVEN<br> PLATFORM FOR
 						<a href="" class="typewrite strong"; data-period="2000"
 							data-type='["SWAPS","GOVERNANCE","GAINS"]'>
 							<span class="wrap"></span>
