--- a/exchange/swap/index.html
+++ b/exchange/swap/index.html
@@ -6,17 +6,17 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>EmberSwap</title>
-	<link rel="shortcut icon" type="image/jpg" href="../img/tokens/ember.png"/>
+	<link rel="shortcut icon" type="image/jpg" href="../../img/tokens/ember.png"/>
 	<meta name="description" content="The official home of EmberSwap. EmberSwap is a community governed decentralized exchange, providing liquidity and enabling peer-to-peer transactions on the smartBCH Network. Whether you want to swap, farm, stake or just hold, EmberSwap is the DEX for you. EmberSwap breaks up and delivers the mostefficent route for any financial instrument on smartBCH.">
     <meta name="keywords" content="incinerate,fire,ember,emberswap,dex,defi,emberdex,firedex,safemoonfork,burnomics,bitcoin,dogecoin,bch,sbch,smartbch,evm,cash,doge,defi,coinbase,coinmarketcap,coinmarket,smartscan,whitebit,coingecko,cryptocurrency,crypto,muesliswap,dex,etherium,eth,btc">
-    <link rel="shortcut icon" type="image/png" href="../img/favicon.png">
-	<link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
-	<link href="../css/custom.css" rel="stylesheet" type="text/css">
-	<link href="../css/style.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" type="image/png" href="../../img/favicon.png">
+	<link href="../../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
+	<link href="../../css/custom.css" rel="stylesheet" type="text/css">
+	<link href="../../css/style.css" rel="stylesheet" type="text/css">
 	<script src="https://kit.fontawesome.com/c6a495a0f8.js" rel="stylesheet" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-	<script src=".././js/block.js" ></script>
+	<script src="../.././js/block.js" ></script>
 	<style>
     .dropdown:hover .dropdown-menu{
         display: block;
@@ -47,8 +47,8 @@
 	<div id="bg-radial-6"></div>
 
 	<nav class="navbar navbar-dark navbar-expand-md bg-faded justify-content-center fixed-top">
-		<a href="../index.html" class="navbar-brand d-flex  mr-auto">
-			<img src="../img/logo.png" class="img-fluid" width="450"></a>
+		<a href="../../index.html" class="navbar-brand d-flex  mr-auto">
+			<img src="../../img/logo.png" class="img-fluid" width="450"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -95,7 +95,7 @@
 				</div>
 
 				<div class="d-none d-md-block d-sm-none col-xl-6 sec-two text-center text-xl-right">
-					<img src="../img/candlesticks2.png" class=" inline-block m-auto">
+					<img src="../../img/candlesticks2.png" class=" inline-block m-auto">
 
 				</div>
 				
@@ -129,7 +129,7 @@
 
 	<div class="col-xl-12 third-container text-center">
 		<h1 class="title">A strong emission curve made by the community</h1>
-		<img src="../img/Group 204.png" class="img-fluid">
+		<img src="../../img/Group 204.png" class="img-fluid">
 	</div>
 	<div class="col-xl-12 fourth-container">
 		<div class="col-xl-11 m-auto">
@@ -141,7 +141,7 @@
 						route for any financial instrument on smartBCH. 
 						The goal is to provide a comprehensive and convenient, one-stop platform for the cryptocurrency community.</p>
 					<div class="text-center text-xl-left">
-						<img src="../img/111.png" class="img-fluid">
+						<img src="../../img/111.png" class="img-fluid">
 					</div>
 				</div>
 
@@ -158,7 +158,7 @@
 				<div class="row justify-content-center align-items-center">
 
 					<div class="col-xl-8 text-center text-xl-left">
-						<img src="../img/tokens/fire.png" class="img-fluid">
+						<img src="../../img/tokens/fire.png" class="img-fluid">
 					</div>
 
 					<div class="col-xl-4 sec-six  mt-5">
@@ -182,124 +182,124 @@
 			<div class="coins-wrapper p-4 p-xl-5 mx-4">
 				<div class="coins m-auto">
 					<div class="coin">
-						<img class="img-fluid" src="../img/tokens/bch.png">
+						<img class="img-fluid" src="../../img/tokens/bch.png">
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../img/tokens/cats.png">
+						<img class="img-fluid" src="../../img/tokens/cats.png">
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../img/tokens/celery.png">
+						<img class="img-fluid" src="../../img/tokens/celery.png">
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../img/tokens/bchpad.png">
+						<img class="img-fluid" src="../../img/tokens/bchpad.png">
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../img/tokens/ember.png">
+						<img class="img-fluid" src="../../img/tokens/ember.png">
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../img/tokens/fire.png">
+						<img class="img-fluid" src="../../img/tokens/fire.png">
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../img/tokens/flex.png">
+						<img class="img-fluid" src="../../img/tokens/flex.png">
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../img/tokens/flexusd.png">
+						<img class="img-fluid" src="../../img/tokens/flexusd.png">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/goblins.png" class="img-fluid">
+						<img src="../../img/tokens/goblins.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/honk.png" class="img-fluid">
+						<img src="../../img/tokens/honk.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/joy.png" class="img-fluid">
+						<img src="../../img/tokens/joy.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/catsluck.png" class="img-fluid">
+						<img src="../../img/tokens/catsluck.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/game.png" class="img-fluid">
+						<img src="../../img/tokens/game.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/law.png" class="img-fluid">
+						<img src="../../img/tokens/law.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/kth.png" class="img-fluid">
+						<img src="../../img/tokens/kth.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/lawusd.png" class="img-fluid">
+						<img src="../../img/tokens/lawusd.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/moonmoonmoonmoon.png" class="img-fluid">
+						<img src="../../img/tokens/moonmoonmoonmoon.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/panda.png" class="img-fluid">
+						<img src="../../img/tokens/panda.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/sbusd.png" class="img-fluid">
+						<img src="../../img/tokens/sbusd.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/wojak.png" class="img-fluid">
+						<img src="../../img/tokens/wojak.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/orb.png" class="img-fluid">
+						<img src="../../img/tokens/orb.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/lns.png" class="img-fluid">
+						<img src="../../img/tokens/lns.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/eve.png" class="img-fluid">
+						<img src="../../img/tokens/eve.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/dao.png" class="img-fluid">
+						<img src="../../img/tokens/dao.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/cao.png" class="img-fluid">
+						<img src="../../img/tokens/cao.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/bcharg.png" class="img-fluid">
+						<img src="../../img/tokens/bcharg.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/cryptosorted.png" class="img-fluid">
+						<img src="../../img/tokens/cryptosorted.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/smartindex.png" class="img-fluid">
+						<img src="../../img/tokens/smartindex.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/gocrypto.png" class="img-fluid">
+						<img src="../../img/tokens/gocrypto.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/spice.png" class="img-fluid">
+						<img src="../../img/tokens/spice.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/sto.png" class="img-fluid">
+						<img src="../../img/tokens/sto.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/uatx.png" class="img-fluid">
+						<img src="../../img/tokens/uatx.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/wenlambo.png" class="img-fluid">
+						<img src="../../img/tokens/wenlambo.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/wireless.png" class="img-fluid">
+						<img src="../../img/tokens/wireless.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/mist.png" class="img-fluid">
+						<img src="../../img/tokens/mist.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/potato.png" class="img-fluid">
+						<img src="../../img/tokens/potato.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/tango.png" class="img-fluid">
+						<img src="../../img/tokens/tango.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/xtango.png" class="img-fluid">
+						<img src="../../img/tokens/xtango.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/mist.png" class="img-fluid">
+						<img src="../../img/tokens/mist.png" class="img-fluid">
 					</div>
 					<div class="coin">
-						<img src="../img/tokens/xmist.png" class="img-fluid">
+						<img src="../../img/tokens/xmist.png" class="img-fluid">
 					</div>
 				</div>
 			</div>
@@ -315,7 +315,7 @@
 		<div class="align-items-center mb-5 justify-content-center row">
 				<div class="text-center col-lg-2 col-4">
 					<div class="team-img team-member">
-						<img src="../img/team/bchpete.jpg" class="img-fluid mb-3" />
+						<img src="../../img/team/bchpete.jpg" class="img-fluid mb-3" />
 					</div>
 					<div class="align-items-center mb-5 justify-content-center row">
 						<div class="text-center col-auto team-member">
@@ -368,10 +368,10 @@
 
 
 
-	<script src="../js/jquery-3.3.1.min.js"></script>
-	<script src="../js/popper.min.js"></script>
-	<script src="../js/bootstrap-4.3.1.js"></script>
-	<script src="../js/custom.js"></script>
+	<script src="../../js/jquery-3.3.1.min.js"></script>
+	<script src="../../js/popper.min.js"></script>
+	<script src="../../js/bootstrap-4.3.1.js"></script>
+	<script src="../../js/custom.js"></script>
 </body>
 
 </html>
