add hyperlinks to tokens

--- a/en/exchange/swap/index.html
+++ b/en/exchange/swap/index.html
@@ -182,124 +182,124 @@
 			<div class="coins-wrapper p-4 p-xl-5 mx-4">
 				<div class="coins m-auto">
 					<div class="coin">
-						<img class="img-fluid" src="../../../img/tokens/bch.png">
+						<a target="_blank" href="https://bitcoincash.org/"><img class="img-fluid" src="../../../img/tokens/bch.png"></a>
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../../../img/tokens/cats.png">
+						<a target="_blank" href="https://cashcats.org/"><img class="img-fluid" src="../../../img/tokens/cats.png"></a>
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../../../img/tokens/celery.png">
+						<a target="_blank" href="https://celery.cash/"><img class="img-fluid" src="../../../img/tokens/celery.png"></a>
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../../../img/tokens/bchpad.png">
+						<a target="_blank" href="https://bchpad.cash/"><img class="img-fluid" src="../../../img/tokens/bchpad.png"></a>
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../../../img/tokens/ember.png">
+						<a target="_blank" href="https://dex.emberswap.com/"><img class="img-fluid" src="../../../img/tokens/ember.png"></a>
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../../../img/tokens/fire.png">
+						<a target="_blank" href="https://incinerate.cash/"><img class="img-fluid" src="../../../img/tokens/fire.png"></a>
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../../../img/tokens/flex.png">
+						<a target="_blank" href="https://coinflex.com/"><img class="img-fluid" src="../../../img/tokens/flex.png"></a>
 					</div>
 					<div class="coin">
-						<img class="img-fluid" src="../../../img/tokens/flexusd.png">
+						<a target="_blank" href="https://coinflex.com/"><img class="img-fluid" src="../../../img/tokens/flexusd.png"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/goblins.png" class="img-fluid">
+						<a target="_blank" href="https://goblins.cash/"><img src="../../../img/tokens/goblins.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/honk.png" class="img-fluid">
+						<a target="_blank" href="https://honk.cash/"><img src="../../../img/tokens/honk.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/joy.png" class="img-fluid">
+						<a target="_blank" href="https://joystick.club/"><img src="../../../img/tokens/joy.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/catsluck.png" class="img-fluid">
+						<a target="_blank" href="https://catsluck.com/"><img src="../../../img/tokens/catsluck.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/game.png" class="img-fluid">
+						<a target="_blank" href="https://axiebch.com/game-token/"><img src="../../../img/tokens/game.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/law.png" class="img-fluid">
+						<a target="_blank" href="https://blockng.money/"><img src="../../../img/tokens/law.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/kth.png" class="img-fluid">
+						<a target="_blank" href="https://kth.cash/"><img src="../../../img/tokens/kth.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/lawusd.png" class="img-fluid">
+						<a target="_blank" href="https://blockng.money/"><img src="../../../img/tokens/lawusd.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/moonmoonmoonmoon.png" class="img-fluid">
+						<a target="_blank" href="https://mmmm.cash/"><img src="../../../img/tokens/moonmoonmoonmoon.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/panda.png" class="img-fluid">
+						<a target="_blank" href="https://pandaland.cash/"><img src="../../../img/tokens/panda.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/sbusd.png" class="img-fluid">
+						<a target="_blank" href="https://sbusd.cash/"><img src="../../../img/tokens/sbusd.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/wojak.png" class="img-fluid">
+						<a target="_blank" href="https://wojak.so/"><img src="../../../img/tokens/wojak.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/orb.png" class="img-fluid">
+						<a target="_blank" href="https://enter-the-sphere.com/"><img src="../../../img/tokens/orb.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/lns.png" class="img-fluid">
+						<a target="_blank" href="https://bch.domains/"><img src="../../../img/tokens/lns.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/eve.png" class="img-fluid">
+						<a target="_blank" href="https://www.ev4earth.org/"><img src="../../../img/tokens/eve.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/dao.png" class="img-fluid">
+						<a target="_blank" href="https://www.marketcap.cash/token/DAO"><img src="../../../img/tokens/dao.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/cao.png" class="img-fluid">
+						<a target="_blank" href="https://cao.cash/"><img src="../../../img/tokens/cao.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/bcharg.png" class="img-fluid">
+						<a target="_blank" href="https://bitcoincashargentina.com/"><img src="../../../img/tokens/bcharg.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/cryptosorted.png" class="img-fluid">
+						<a target="_blank" href="https://cryptosorted.info/"><img src="../../../img/tokens/cryptosorted.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/smartindex.png" class="img-fluid">
+						<a target="_blank" href="https://smartindex.cash/"><img src="../../../img/tokens/smartindex.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/gocrypto.png" class="img-fluid">
+						<a target="_blank" href="https://gocrypto.com/"><img src="../../../img/tokens/gocrypto.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/spice.png" class="img-fluid">
+						<a target="_blank" href="https://spicetoken.org/"><img src="../../../img/tokens/spice.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/sto.png" class="img-fluid">
+						<a target="_blank" href="https://www.marketcap.cash/token/STO"><img src="../../../img/tokens/sto.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/uatx.png" class="img-fluid">
+						<a target="_blank" href="https://www.uat.cash/"><img src="../../../img/tokens/uatx.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/wenlambo.png" class="img-fluid">
+						<a target="_blank" href="https://wenlambotoken.github.io/"><img src="../../../img/tokens/wenlambo.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/wireless.png" class="img-fluid">
+						<a target="_blank" href="https://ham-token.website2.me/"><img src="../../../img/tokens/wireless.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/mist.png" class="img-fluid">
+						<a target="_blank" href="https://axiebch.com/"><img src="../../../img/tokens/axiebch.webp" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/potato.png" class="img-fluid">
+						<a target="_blank" href="https://potatoco.in/"><img src="../../../img/tokens/potato.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/tango.png" class="img-fluid">
+						<a target="_blank" href="https://tangoswap.cash/"></target="_blank" href><img src="../../../img/tokens/tango.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/xtango.png" class="img-fluid">
+						<a target="_blank" href="https://tangoswap.cash/"><img src="../../../img/tokens/xtango.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/mist.png" class="img-fluid">
+						<a target="_blank" href="https://mistswap.fi/"><img src="../../../img/tokens/mist.png" class="img-fluid"></a>
 					</div>
 					<div class="coin">
-						<img src="../../../img/tokens/xmist.png" class="img-fluid">
+						<a target="_blank" href="https://mistswap.fi/"><img src="../../../img/tokens/xmist.png" class="img-fluid"></a>
 					</div>
 				</div>
 			</div>
@@ -315,11 +315,11 @@
 		<div class="align-items-center mb-5 justify-content-center row">
 				<div class="text-center col-lg-2 col-4">
 					<div class="team-img team-member">
-						<img src="../../../img/team/bchpete.jpg" class="img-fluid mb-3" />
+						<a href="https://t.me/bchpete" target="_blank"><img src="../../../img/team/bchpete.jpg" class="img-fluid mb-3" /></a>
 					</div>
 					<div class="align-items-center mb-5 justify-content-center row">
 						<div class="text-center col-auto team-member">
-								<p class="mb-0 team-name" href="https://t.me/bchpete" target="_blank">bchpete</p>
+								<p class="mb-0 team-name" >bchpete</p>
 						</div>
 					</div>
 				</div>
