--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				</div>
 				<div class="col-xl-3 text-center sec-three">
 					<h1 class="text-white" id="LiquidityLocked" ><i class="fad fa-solid fa-spinner fa-pulse"></i></h1>
-					<p>EMBER locked in vaults</p>
+					<p><span class="sec-grey"><span><span id="VaultPercent" ><i class="fad fa-solid fa-spinner fa-pulse"></i></span>% of total </span></span>EMBER locked in vaults</p>
 				</div>
 				<div class="col-xl-3 text-center sec-three">
 					<h1 class="text-white">smartBCH<span></span></h1>
