add incinerate read more button

--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
 					<div class="col-xl-4 sec-six  mt-5">
 						<h1 class="text-white  text-center text-xl-left">Get Rewarded<br> For holding $FIRE</h1>
 						<p class="mt-5  text-center text-xl-left">10% of all emissions from farms will be distributed to token holders weekly. No need for complicated staking systems. Just hold <strong>$FIRE</strong> and get airdropped <strong>$EMBER</strong>.</p>
-
+						<div class="text-center text-xl-left">
+							<a href="https://incinerate.cash" target="_blank"><button type="submit" class="btn btn-primary btn-read mt-5">Learn More</button></a>
+						</div>
 					</div>
 
 				</div>
