added scrollbar, minor css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 	<div id="bg-radial-2"></div>
 	<div id="bg-radial-3"></div>
 	<div id="bg-radial-4"></div>
-	<div id="bg-radial-6"></div>
 
 	<nav class="navbar navbar-dark navbar-expand-md bg-faded justify-content-center fixed-top">
 		<a href="index.html" class="navbar-brand d-flex  mr-auto">
@@ -315,9 +314,9 @@
 			</div>
 		</div>
 		<div class="align-items-center mb-5 justify-content-center row">
-				<div class="text-center col-lg-2 col-4">
+				<div class="text-center">
 					<div class="team-img team-member">
-						<a href="https://t.me/bchpete" target="_blank"><img src="img/team/bchpete.jpg" class="img-fluid mb-3" /></a>
+						<a href="https://t.me/bchpete" target="_blank"><img src="img/team/bchpete.jpg" class="img-fluid mb-3 justify-content-center items-center align-items-center" /></a>
 					</div>
 					<div class="align-items-center mb-5 justify-content-center row">
 						<div class="text-center col-auto team-member">
@@ -347,7 +346,7 @@
 
 
 	</div>
-	<div class="text-lg-end text-right col">
+	<div class="text-lg-end text-right col" style="position:relative; bottom:-50px">
 		<ul class="list-unstyled">
 			<li class="pb-2">
 				<a class="text-grey text-grey:hover mt-5 mb-5" href="https://github.com/emberswap/emberswap-contracts"
@@ -361,11 +360,9 @@
 	  </div>
 
 
-	<div class="col-xl-12" style="background:#1B1F26;padding:0;padding-top:1rem;padding-bottom: 1rem;">
-		<div class="col-xl-11 m-auto">
+		<div class="col-xl-11 m-auto" style="position:relative; bottom:-50px">
 			<p class="text-white text-center text-center">No Copyrights © Free The World | Decentralize Everything.</p>
 		</div>
-	</div>
 </div>
 
 
