--- a/index.html
+++ b/index.html
@@ -323,8 +323,30 @@
 								<p class="mb-0 team-name" >bchpete</p>
 						</div>
 					</div>
+
 				</div>
-		</div>
+		</div>					<div class="row justify-content-center align-items-center">
+						<div class="col-auto skill-box with-image">
+							<p class="title">Nomics</p>
+							<p class="description"> API-first cryptoasset data company delivering professional-grade market data APIs</p>
+							<a href="https://nomics.com/exchanges/emberswap" target="_blank"><img src="img/brands/nomics.png" /></a>
+						</div>
+						<div class="col-auto skill-box with-image">
+							<p class="title">MarketCap<span style="color: #00e08e;">.Cash</span></p>
+							<p class="description">Prices, Charts & Market Capitalization specifically for SEP20 Tokens on SmartBCH</p>
+							<a href="https://www.marketcap.cash/token/EMBER" target="_blank"><img src="img/brands/marketcapcash.png" /></a>
+						</div>
+						<div class="col-auto skill-box with-image">
+							<p class="title">DEXScreener</p>
+							<p class="description">Realtime price charts and trading history on DEXes across multiple networks</p>
+							<a href="https://dexscreener.com/smartbch/emberswap" target="_blank"><img src="img/brands/dexscreener.jpg" /></a>
+						</div>
+						<div class="col-auto skill-box with-image">
+							<p class="title">HelpMe<span style="color: #00e08e;">.Cash</span></p>
+							<p class="description">Useful Smart Bitcoin Cash links and information assembled in one place</p>
+							<a href="https://helpme.cash" target="_blank"><img src="/img/brands/helpmecash.jpg" /></a>
+						</div>
+					</div>
 	</div>
 
 	<div class="col-xl-12 seventh-container">
