add light/dark mode

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html data-theme="dark">
 
 <head>
 	<meta charset="utf-8">
@@ -17,6 +17,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 	<script src="./js/block.js" ></script>
+	<script src="./js/main.js"></script>
 	<style>
     .dropdown:hover .dropdown-menu{
         display: block;
@@ -67,11 +68,20 @@
 				</li>
 				<li class="nav-item">
 						<a class="btn btn-outline-secondary" href="https://dex.emberswap.com">Enter App</a>
-				</li>
+				</li>	
+
 			</ul>
 		</div>
+			<div class ="theme-box d-none d-md-block">
+						<title>Dark Light Theme</title>
+						<i class="fas fa-sun fa-xl theme-switcher justify-content-center"></i>
+					</div>
+					<div class ="theme-mobile-box d-md-none">
+						<title>Dark Light Theme</title>
+						<i class="fas fa-sun fa-xl theme-switcher justify-content-center"></i>
+					</div>
 	</nav>
-
+					
 	<div class="col-xl-12 cont-first">
 		<div class="col-xl-11 m-auto">
 
@@ -94,7 +104,7 @@
 				</div>
 
 				<div class="d-none d-md-block d-sm-none col-xl-6 sec-two text-center text-xl-right">
-					<img src="img/candlesticks2.png" class=" inline-block m-auto">
+					<img src="img/candlesticks2.png" class="inline-block m-auto">
 
 				</div>
 				
@@ -128,7 +138,7 @@
 
 	<div class="col-xl-12 third-container text-center">
 		<h1 class="title">A strong emission curve made by the community</h1>
-		<img src="img/Group 204.png" class="img-fluid">
+		<img src="img/Group 204.png" class="img-fluid group204 " id="icon">
 	</div>
 	<div class="col-xl-12 fourth-container">
 		<div class="col-xl-11 m-auto">
@@ -140,7 +150,7 @@
 						route for any financial instrument on smartBCH. 
 						The goal is to provide a comprehensive and convenient, one-stop platform for the cryptocurrency community.</p>
 					<div class="text-center text-xl-left">
-						<img src="img/111.png" class="img-fluid">
+						<img src="img/111.png" class="logo img-fluid">
 					</div>
 				</div>
 
@@ -157,7 +167,7 @@
 				<div class="row justify-content-center align-items-center">
 
 					<div class="col-xl-8 text-center text-xl-left">
-						<img src="img/tokens/fire.png" class="img-fluid">
+						<img src="img/tokens/fire.png" class="fire-logo img-fluid">
 					</div>
 
 					<div class="col-xl-4 sec-six  mt-5">
