add defillama and ease-in-out transition

--- a/index.html
+++ b/index.html
@@ -356,6 +356,11 @@
 							<p class="description">Useful Smart Bitcoin Cash links and information assembled in one place</p>
 							<a href="https://helpme.cash" target="_blank"><img src="/img/brands/helpmecash.jpg" /></a>
 						</div>
+						<div class="col-auto skill-box with-image">
+							<p class="title">Defi Llama</p>
+							<p class="description">DefiLlama is the largest TVL aggregator for DeFi with fully open-sourced data</p>
+							<a href="https://defillama.com/chain/smartBCH" target="_blank"><img src="/img/brands/DefiLlama_logo.jpeg" /></a>
+						</div>
 					</div>
 	</div>
 
