mobile button enter app

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	<nav class="navbar navbar-dark navbar-expand-md bg-faded justify-content-center fixed-top">
 		<a href="index.html" class="navbar-brand d-flex  mr-auto">
 			<img src="img/logo.png" class="img-fluid" width="450"></a>
+		<a class="btn btn-outline-secondary d-md-none" href="https://dex.emberswap.com">Enter App</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -66,7 +67,7 @@
 							<a class="dropdown-item" href="https://docs.emberswap.com/">Docs</a>
 						</div>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item d-none d-md-block">
 						<a class="btn btn-outline-secondary" href="https://dex.emberswap.com">Enter App</a>
 				</li>	
 
@@ -335,33 +336,34 @@
 					</div>
 
 				</div>
-		</div>					<div class="row justify-content-center align-items-center">
-						<div class="col-auto skill-box with-image">
-							<p class="title">Nomics</p>
-							<p class="description"> API-first cryptoasset data company delivering professional-grade market data APIs</p>
-							<a href="https://nomics.com/exchanges/emberswap" target="_blank"><img src="img/brands/nomics.png" /></a>
-						</div>
-						<div class="col-auto skill-box with-image">
-							<p class="title">MarketCap<span style="color: #00e08e;">.Cash</span></p>
-							<p class="description">Prices, Charts & Market Capitalization specifically for SEP20 Tokens on SmartBCH</p>
-							<a href="https://www.marketcap.cash/token/EMBER" target="_blank"><img src="img/brands/marketcapcash.png" /></a>
-						</div>
-						<div class="col-auto skill-box with-image">
-							<p class="title">DEXScreener</p>
-							<p class="description">Realtime price charts and trading history on DEXes across multiple networks</p>
-							<a href="https://dexscreener.com/smartbch/emberswap" target="_blank"><img src="img/brands/dexscreener.jpg" /></a>
-						</div>
-						<div class="col-auto skill-box with-image">
-							<p class="title">HelpMe<span style="color: #00e08e;">.Cash</span></p>
-							<p class="description">Useful Smart Bitcoin Cash links and information assembled in one place</p>
-							<a href="https://helpme.cash" target="_blank"><img src="/img/brands/helpmecash.jpg" /></a>
-						</div>
-						<div class="col-auto skill-box with-image">
-							<p class="title">Defi Llama</p>
-							<p class="description">DefiLlama is the largest TVL aggregator for DeFi with fully open-sourced data</p>
-							<a href="https://defillama.com/chain/smartBCH" target="_blank"><img src="/img/brands/DefiLlama_logo.jpeg" /></a>
-						</div>
-					</div>
+		</div>					
+		<div class="row justify-content-center align-items-center">
+			<div class="col-auto skill-box with-image">
+				<p class="title">Nomics</p>
+				<p class="description"> API-first cryptoasset data company delivering professional-grade market data APIs</p>
+				<a href="https://nomics.com/exchanges/emberswap" target="_blank"><img src="img/brands/nomics.png" /></a>
+			</div>
+			<div class="col-auto skill-box with-image">
+				<p class="title">MarketCap<span style="color: #00e08e;">.Cash</span></p>
+				<p class="description">Prices, Charts & Market Capitalization specifically for SEP20 Tokens on SmartBCH</p>
+				<a href="https://www.marketcap.cash/token/EMBER" target="_blank"><img src="img/brands/marketcapcash.png" /></a>
+			</div>
+			<div class="col-auto skill-box with-image">
+				<p class="title">DEXScreener</p>
+				<p class="description">Realtime price charts and trading history on DEXes across multiple networks</p>
+				<a href="https://dexscreener.com/smartbch/emberswap" target="_blank"><img src="img/brands/dexscreener.jpg" /></a>
+			</div>
+			<div class="col-auto skill-box with-image">
+				<p class="title">HelpMe<span style="color: #00e08e;">.Cash</span></p>
+				<p class="description">Useful Smart Bitcoin Cash links and information assembled in one place</p>
+				<a href="https://helpme.cash" target="_blank"><img src="/img/brands/helpmecash.jpg" /></a>
+			</div>
+			<div class="col-auto skill-box with-image">
+				<p class="title">Defi Llama</p>
+				<p class="description">DefiLlama is the largest TVL aggregator for DeFi with fully open-sourced data</p>
+				<a href="https://defillama.com/chain/smartBCH" target="_blank"><img src="/img/brands/DefiLlama_logo.jpeg" /></a>
+			</div>
+		</div>
 	</div>
 
 	<div class="col-xl-12 seventh-container">
