--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<nav class="navbar navbar-dark navbar-expand-md bg-faded justify-content-center fixed-top">
 		<a href="index.html" class="navbar-brand d-flex  mr-auto">
 			<img src="img/logo.png" class="img-fluid" width="450"></a>
-		<a class="btn btn-outline-secondary d-md-none" href="https://dex.emberswap.com">Enter&nbsp;App</a>
+		<a class="btn btn-outline-secondary d-md-none" href="https://dex.emberswap.com"> <span style="position: relative; left: -30px;">Enter&nbsp;App</span></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
 			<span class="navbar-toggler-icon"></span>
 		</button>
