--- a/exchange/swap/index.html
+++ b/exchange/swap/index.html
@@ -55,7 +55,7 @@
 		<div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
 			<ul class="nav navbar-nav ml-auto w-100 justify-content-end">
 				<li class="nav-item">
-					<a class="nav-link nav-link2" href="https://dex.emberswap.com/analytics">Analytics</a>
+					<a class="nav-link nav-link2" href="https://analytics.emberswap.com">Analytics</a>
 				</li>
 				<li class="nav-item dropdown">
 						<a class="nav-link nav-link2" type="button" id="dropdownMenuButton" data-toggle="dropdown">FAQ
