add LNS brands page

--- a/index.html
+++ b/index.html
@@ -354,6 +354,8 @@
 				<p class="description">Realtime price charts and trading history on DEXes across multiple networks</p>
 				<a href="https://dexscreener.com/smartbch/emberswap" target="_blank"><img src="img/brands/dexscreener.jpg" /></a>
 			</div>
+			</div>
+			<div class="row justify-content-center align-items-center">
 			<div class="col-auto skill-box with-image">
 				<p class="title">HelpMe<span style="color: #00e08e;">.Cash</span></p>
 				<p class="description">Useful Smart Bitcoin Cash links and information assembled in one place</p>
@@ -363,6 +365,11 @@
 				<p class="title">Defi Llama</p>
 				<p class="description">DefiLlama is the largest TVL aggregator for DeFi with fully open-sourced data</p>
 				<a href="https://defillama.com/chain/smartBCH" target="_blank"><img src="/img/brands/DefiLlama_logo.jpeg" /></a>
+			</div>
+			<div class="col-auto skill-box with-image">
+				<p class="title">LNS</p>
+				<p class="description">Your web3 username, store an avatar and other profile data, and use it across services.</p>
+				<a href="https://bch.domains/" target="_blank"><img src="/img/brands/LNS.png" /></a>
 			</div>
 		</div>
 	</div>
